layer.conf: Set warrior to LAYERSERIES_COMPAT_debian
Signed-off-by: Nobuhiro Iwamatsu <nobuhiro.iwamatsu@miraclelinux.com>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -15,7 +15,7 @@ LAYERVERSION_debian = "1"
 
 LAYERDEPENDS_debian = "core"
 
-LAYERSERIES_COMPAT_debian = "thud"
+LAYERSERIES_COMPAT_debian = "warrior"
 
 # Set a variable to keep the path of layer meta-debian
 LAYERDIR_DEBIAN_debian = '${@os.path.normpath("${LAYERDIR}")}'
